enterprise/frontend/src/metabase-enterprise/documents/components/EmojiPicker/EmojiPicker.module.css
.root {
  display: flex;
  flex-direction: column;
  height: 17rem;
  width: 17rem;
}

.pickerSearch {
  display: none;
}

.pickerViewport {
  overflow: auto;
  flex-grow: 1;
}

.pickerMessage {
  position: absolute;
  inset: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--mb-color-text-secondary);
}

.emojiButton[data-active],
.emojiButton:hover[data-vairant="subtle"] {
  background-color: var(--mb-color-bg-medium);
}

